<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"
            android:weightSum="10">
            <Button
                android:id="@+id/btnExitOngoingWorkout"
                android:text="@string/x"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:color/holo_red_dark"/>
            <TextView
                android:text="@string/workoutInProgress"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:weightSum="4">
            <TextView
                android:text="@string/duration"
                android:gravity="center_vertical"
                android:textAlignment="textEnd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="RtlCompat" />
            <TextView
                android:id="@+id/txtExerciseDurationOngoingWorkout"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/black"/>
            <TextView
                android:text="@string/progress"
                android:gravity="center_vertical"
                android:textAlignment="textEnd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/txtExerciseProgressOngoinWorkout"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>
        <ProgressBar
            android:id="@+id/prgbarWorkoutActivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="50"
            android:progress="36"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    </LinearLayout>
    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"/>


</LinearLayout>