<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_rowWeight="12"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="10"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.35"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hey"
                        android:textSize="18sp"
                        android:textAlignment="textEnd"
                        android:paddingRight="6dp"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:id="@+id/txtProfileNameMainPageFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_gravity="center_horizontal"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.3"
                    android:gravity="center">
                    <TextView
                        android:text="@string/trainQuestion"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.35"
                    android:gravity="center"
                    >
                    <Spinner
                        android:id="@+id/spnrSelectCategoryMainPage"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        />
                </LinearLayout>
                <com.idunnololz.widgets.AnimatedExpandableListView
                    android:id="@+id/explvMainPageContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:groupIndicator="@null"
                    android:layout_weight=".85"
                    android:dividerHeight="5dp"
                    android:divider="@android:color/white"
                    android:childDivider="@android:color/white"
                    />
                <Button
                    android:id="@+id/btnStartWorkoutMainPageFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.1"
                    android:text="@string/startWorkout"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/background_allround_shape_button_blue"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    />
            </LinearLayout>
        </GridLayout>
</LinearLayout>