<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorMintCream"
    android:weightSum="11"
    android:orientation="vertical">
    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.07"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".8"
        android:orientation="vertical"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/clrQueenBlue">
            </View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:background="@color/colorAccent"/>
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfilePictureSidebar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerInParent="true"
            android:src="@drawable/profileimg" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.025">
        <TextView
            android:id="@+id/txtProfileNameSidebar"
            android:text="Magyar Csaba"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.03">
            <TextView
                android:id="@+id/txtCurrentHeight"
                android:text="180 cm"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.03">
        <TextView
            android:id="@+id/txtCurrentWeight"
            android:text="102.0 kg"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.03"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtWeightLossFromText"
            android:text="From "
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/txtWeightLossFromKg"
            android:text="105.2 kgs "
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/txtWeightLossFromText"/>

        <TextView
            android:id="@+id/txtWeightLossInText"
            android:text="in "
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/txtWeightLossFromKg"/>

        <TextView
            android:id="@+id/txtWeightLossIn"
            android:text="2 weeks"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/txtWeightLossInText"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.03"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtWeightLossPerWeek"
            android:text="15 kgs "
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/txtWeightLostOrGainedText"
            android:text="lost"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_toEndOf="@+id/txtWeightLossPerWeek"/>
        <TextView
            android:text=" per week"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_toEndOf="@+id/txtWeightLostOrGainedText"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="20dp">
            <ImageView
                android:id="@+id/imgIconIntensitySidebar"
                android:src="@drawable/icon_intensity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/intensity"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_toEndOf="@+id/imgIconIntensitySidebar"
                android:paddingStart="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="20dp">
        <ImageView
            android:id="@+id/imgIconGoalsSidebar"
            android:src="@drawable/icon_goals"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/goals"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_toEndOf="@+id/imgIconGoalsSidebar"
            android:paddingStart="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="20dp">
        <ImageView
            android:id="@+id/imgIconTrainingCategoriesSidebar"
            android:src="@drawable/icon_trainingcategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/trainingCategories"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_toEndOf="@+id/imgIconTrainingCategoriesSidebar"
            android:paddingStart="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="20dp">
        <ImageView
            android:id="@+id/imgIconHistorySidebar"
            android:src="@drawable/icon_history"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/history"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_toEndOf="@+id/imgIconHistorySidebar"
            android:paddingStart="10dp"/>
    </RelativeLayout>

</LinearLayout>